--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "concurrently": "^9.0.1",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
