--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-toastify": "^10.0.5"
   }
 }
