--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@sendgrid/mail": "^8.1.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.6.0",
     "concurrently": "^9.0.1",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "datauri": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
@@ -41,6 +43,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "react-toastify": "^10.0.5"
   }
 }
