--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-table": "^7.8.0",
+    "react-table-sticky": "^1.1.3",
     "react-toastify": "^10.0.5",
+    "regenerator-runtime": "^0.14.1",
     "styled-components": "^6.1.13",
     "zustand": "^5.0.3"
   },
