--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/itsthevictor/onca-crm#readme",
   "dependencies": {
+    "@mui/material": "^7.0.0-rc.0",
     "@sendgrid/mail": "^8.1.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
